--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <title>RicardoFinke Portfolio</title>
   </head>
   <body>
-    <h1>Hello!</h1>
-    <p>My site is working on GitHub Pages.</p>
+    <h1>Welcome!</h1>
+    <p>Welcome by mijn portfolio</p>
   </body>
 </html>
