--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <p>Welcome by mijn portfolio</p>
+    <p>Welcome bij mijn portfolio</p>
   </body>
 </html>
