--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>RicardoFinke Portfolio</title>
   </head>
   <body>
-    <h1>Welcome!</h1>
-    <p>Welcome bij mijn portfolio</p>
+    <h1>Welkom!</h1>
+    <p>Welkom bij mijn portfolio</p>
   </body>
 </html>
