Update welcome message in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>RicardoFinke Portfolio</title>
   </head>
   <body>
-    <h1>Welkom!</h1>
-    <p>Welkom bij mijn portfolio</p>
+    <p>Hallo daar! |</p>
+    <h1>I ben Ricardo Finke</h1>
+    <p>| Welkom bij mijn portfolio Website</p>
   </body>
 </html>
