--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>RicardoFinke Portfolio</title>
   </head>
   <body>
-    <p>Hallo daar! |</p>
-    <h1>I ben Ricardo Finke</h1>
-    <p>| Welkom bij mijn portfolio Website</p>
+    <p>| Hallo daar!</p>
+    <h1>| I ben Ricardo Finke.</h1>
+    <p>| Welkom bij mijn portfolio Website!</p>
   </body>
 </html>
