--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RicardoFinke Portfolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ricardo Jordi Finke | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>| Hallo daar!</p>
-    <h1>| I ben Ricardo Finke.</h1>
-    <p>| Welkom bij mijn portfolio Website!</p>
+    <header>
+      <h1>Ricardo Jordi Finke</h1>
+      <p>Student Software Development - ROC van Twente</p>
+    </header>
+    <main>
+      <section id="about" class="section">
+        <h2>Over mij</h2>
+        <p>Ik ben Ricardo Jordi Finke, student Software Development aan het ROC van Twente. Ik werk graag aan simpele, duidelijke projecten en leer graag nieuwe technieken.</p>
+      </section>
+      <section id="skills" class="section">
+        <h2>Vaardigheden</h2>
+        <div class="skills">
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>JavaScript</span>
+          <span>Git</span>
+        </div>
+      </section>
+      <section id="projects" class="section">
+        <h2>Projecten</h2>
+        <ul>
+          <li>Portfolio website (dit project)</li>
+          <li>Kleine JavaScript to-do app</li>
+          <li>Schoolproject – simpele databaseapp</li>
+        </ul>
+      </section>
+      <section id="contact" class="section">
+        <h2>Contact</h2>
+        <p>Email: ricardo@example.com</p>
+        <p>Telefoon: 06-12345678</p>
+      </section>
+    </main>
+    <footer>
+      © 2025 Ricardo Jordi Finke
+    </footer>
   </body>
 </html>
