Update personal introduction and skills list

--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
     <main>
       <section id="about" class="section">
         <h2>Over mij</h2>
-        <p>Ik ben Ricardo Jordi Finke, student Software Development aan het ROC van Twente. Ik werk graag aan simpele, duidelijke projecten en leer graag nieuwe technieken.</p>
+        <p>Ik ben Ricardo Jordi Finke, student Software Development bij het ROC van Twente. Ik werk graag aan simpele, duidelijke projecten en leer graag nieuwe technieken.</p>
       </section>
       <section id="skills" class="section">
         <h2>Vaardigheden</h2>
         <div class="skills">
+          <span>C#</span>
+          <span>Unity/Unity6</span>
           <span>HTML</span>
           <span>CSS</span>
-          <span>JavaScript</span>
           <span>Git</span>
+          <span>Python</span>
+          <span>Blender</span>
+          <span>Java</span>
+          <span>JavaScript</span>
         </div>
       </section>
       <section id="projects" class="section">
