--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <h2>Projecten</h2>
         <ul>
           <li>Portfolio website (dit project)</li>
-          <li>Kleine JavaScript to-do app</li>
-          <li>Schoolproject – simpele databaseapp</li>
+          <li>PurpTown (2D Story Pixel game)</li>
+          <li>Wake99 (3D Story horror game met 2D sprites)</li>
         </ul>
       </section>
       <section id="contact" class="section">
         <h2>Contact</h2>
-        <p>Email: ricardo@example.com</p>
-        <p>Telefoon: 06-12345678</p>
+        <p>Email: ricardo.809v@gmail.com</p>
+        <p>Telefoon: 06-11880851</p>
       </section>
     </main>
     <footer>
